<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>top.mingempty</groupId>
        <artifactId>spring-cloud-mingempty-dependencies</artifactId>
        <version>${dependencies.version}</version>
        <relativePath>../spring-cloud-mingempty-dependencies/pom.xml</relativePath>
    </parent>

    <artifactId>mingempty-gateway</artifactId>
    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>

        <project.encoding>UTF-8</project.encoding>
        <project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${project.encoding}</project.reporting.outputEncoding>
    </properties>

    <dependencies>
        <!-- 自动提示配置 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>

        <!--gateway 网关依赖,内置webflux 依赖-->
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-gateway</artifactId>
        </dependency>

        <!--nacos注册中心封装-->
        <dependency>
            <groupId>top.mingempty</groupId>
            <artifactId>mingempty-nacos-discovery-spring-boot3-starter</artifactId>
        </dependency>

        <!--nacos配置中心-->
        <dependency>
            <groupId>com.alibaba.cloud</groupId>
            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
        </dependency>

        <!-- LB 扩展 -->
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-loadbalancer</artifactId>
        </dependency>

        <!--第三方依赖👆  项目自身依赖👇-->

        <!--基础工具类-->
        <dependency>
            <groupId>top.mingempty</groupId>
            <artifactId>mingempty-commons</artifactId>
        </dependency>

        <!--对spring的封装starter-->
        <dependency>
            <groupId>top.mingempty</groupId>
            <artifactId>mingempty-spring-boot3-starter</artifactId>
        </dependency>

        <!--trace链路封装starter-->
        <dependency>
            <groupId>top.mingempty</groupId>
            <artifactId>mingempty-trace-spring-boot3-starter</artifactId>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <mainClass>top.mingempty.gateway.GatewayApplication</mainClass>
                </configuration>
                <executions>
                    <execution>
                        <id>repackage</id>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <configuration>
                    <!-- deploy 时忽略此model -->
                    <skip>true</skip>
                </configuration>
            </plugin>
        </plugins>

    </build>


</project>